# KMiri

./: .gitignore  .gitmodules  Dockerfile  KernMiri-Overview.md  README.md  README_CN.md  run.sh  rust-toolchain.toml
.claude/: settings.json
.cocoindex_code/: settings.yml
.codex/: config.toml
.github/workflows/: gdb.yaml  kmiri.yaml
kmiri-helper/: .gitignore  Cargo.toml  run.sh
kmiri-helper/src/: lib.rs
old/: README.md
tests/: README.md
tests/init/: .gdb_history  Cargo.toml  OSDK.toml  entry.gdb
tests/init/src/: lib.rs
tests/os/: .gdb_history  Cargo.toml  OSDK.toml  before_memory_deallocation.txt  breakpoints.gdb  command.gdb  dash.gdb  hi.gdb  hi.py  init.gdb  miri.gdb  miri.py  miri.sh  rust-toolchain.toml
tool/: README.md  install_miri_osdk.sh  run_docker.sh
tool/gdb/: Dockerfile  breakpoints.gdb  dash.gdb  miri.gdb  miri.py
